# vlur

./: .editorconfig  .luarc.json  .stylua.toml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: autofix.yml  fix.yml  test.yml
crates/compiled-time/: Cargo.toml
crates/compiled-time/src/: lib.rs
crates/compiled-time/tests/: compiled-time.rs  test.rs
crates/xtask/: Cargo.toml  main.rs
doc/: vlur.txt
lua/: vlur.lua  vlur_ui.lua
lua/shikakui/: README.md  component.lua  element.lua  hooks.lua  init.lua  utils.lua
lua/shikakui/element/: base.lua  builder.lua  floatwin.lua  highlight.lua  padding.lua  root.lua  text.lua
lua/vlur/: nvim.lua  ui.lua  utils.lua
lua/vlur/ui/: types.lua  window.lua
lua/vlur_ui/: types.lua  window.lua
scripts/: bump_file.lua  quit.vim
src/: cache.rs  install.rs  lazy.rs  lib.rs  nvim.rs  plugin.rs  runtimepath.rs  setup.rs  ui.rs  utils.rs
src/install/: git.rs
src/lazy/: event.rs
tests/: disable_default_plugins.lua  install.lua  load.lua  load_default_plugins.lua  main.rs  run.rs
tests/packpath/package_root/pack/pkgs/start/bar/plugin/: bar.lua
tests/packpath/package_root/start/foo/after/plugin/: foo.lua
vlur/: Cargo.toml  build.rs
vlur/src/: cache.rs  install.rs  lazy.rs  lib.rs  module.rs  nvim.rs  plugin.rs  runtimepath.rs  setup.rs  ui.rs  utils.rs
vlur/src/install/: git.rs
vlur/src/lazy/: event.rs
vlur_bridge/: Cargo.toml  build.rs
vlur_bridge/src/: lib.rs
vlur_macros/: Cargo.toml
vlur_macros/src/: lib.rs
vlur_macros/tests/: unique_bytes.rs
vlur_tests/: Cargo.toml  entry_point.rs
vlur_tests/benches/: main.rs  only_setup.lua
vlur_tests/packpath/: read.lua
vlur_tests/packpath/package_root/start/foo/plugin/: foo.lua
vlur_tests/src/: lib.rs  run.rs
vlur_tests/tests/: disable_default_plugins.lua  main.rs
vlur_tests/tests/packpath/: read.lua
xtask/: Cargo.toml  main.rs
