[workspace]
resolver = "2"
members = [
    "vlur",
    "vlur_macros",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
mlua = { version = "0.9.2", features = ["luajit"] }
vlur_macros.path = "vlur_macros"

[profile.release]
lto = true
codegen-units = 1
