[package]
name = "vlur"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
vlur_macros.workspace = true
anyhow.workspace = true
mlua = { workspace = true, features = ["module", "macros"] }
walkdir = "2.5.0"
hashbrown = { version = "0.14.5", features = ["rkyv"] }
rkyv = "0.7.44"
log = "0.4.22"
fern = "0.6.2"

[build-dependencies]
anyhow.workspace = true
